# codveda-c-cpp-internship

./: README.md
Producer–Consumer Queue Simulator/: CMakeLists.txt  README.md
Producer–Consumer Queue Simulator/include/: Item.hpp  Statistics.hpp
Producer–Consumer Queue Simulator/src/: main.cpp
Simple File System Simulation/: CMakeLists.txt  README.md
Simple File System Simulation/include/: File.h  FileManager.h  Storage.h
Simple File System Simulation/src/: File.cpp  FileManager.cpp  Storage.cpp  main.cpp
Tic-Tac-Toe/: CMakeLists.txt  README.md
Tic-Tac-Toe/include/: Board.hpp
Tic-Tac-Toe/src/: main.cpp
