cmake_minimum_required(VERSION 3.16)
project(TicTacToe VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(tic_tac_toe src/main.cpp)
if(MSVC)
  target_compile_options(tic_tac_toe PRIVATE /W4 /permissive-)
else()
  target_compile_options(tic_tac_toe PRIVATE -Wall -Wextra -Wpedantic)
endif()